bytcr-rt5640: Add support for a second headphones output
Some devices (HP Elitepad 1000 G2) have a second headphones output
(1 on the dock, 2nd on the tablet itself) which is implemented through
the line-out output of the codec combined with an external hp-amp.

The kernel has recently gotten support for this setup and will
advertise this to userspace by adding cfg-hp2:lineout to the
components string, add support for this.

Signed-off-by: Hans de Goede <hdegoede@redhat.com>

--- a/ucm2/bytcr-rt5640/HiFi-Components.conf
+++ b/ucm2/bytcr-rt5640/HiFi-Components.conf
@@ -42,3 +42,12 @@ If.in3 {
 	}
 	True.Define.HaveInternalMic "in3"
 }
+
+If.hs2 {
+	Condition {
+		Type String
+		Haystack "${CardComponents}"
+		Needle "cfg-hp2:lineout"
+	}
+	True.Define.HaveHeadPhones2 "yes"
+}
