--- a/ucm2/bytcr-rt5640/HiFi.conf
+++ b/ucm2/bytcr-rt5640/HiFi.conf
@@ -4,6 +4,7 @@ Define.HaveAif ""
 Define.HaveSpeaker ""
 Define.HaveInternalMic ""
 Define.HaveHeadsetMic "yes"
+Define.HaveHeadPhones2 ""
 
 If.DefineAif1 {
 	Condition {
@@ -110,6 +111,23 @@ If.hp {
 
 			DisableSequence [
 				cset "name='Headphone Switch' off"
+			]
+		}
+	}
+}
+
+If.hp2 {
+	Condition { Type String Empty "${var:HaveHeadPhones2}" }
+	False {
+		Include.hs.File "/codecs/rt5640/HeadPhones2.conf"
+
+		SectionDevice."Headphones2" {
+			EnableSequence [
+				cset "name='Line Out Switch' on"
+			]
+
+			DisableSequence [
+				cset "name='Line Out Switch' off"
 			]
 		}
 	}
