bytcr-rt5640: Add support for devices using the DMIC2 input for their internal mic(s)
Add support for devices using the DMIC2 input for their internal mic(s),
this has been tested on a HP Elitepad 1000 G2.

Signed-off-by: Hans de Goede <hdegoede@redhat.com>

--- a/ucm2/bytcr-rt5640/HiFi.conf
+++ b/ucm2/bytcr-rt5640/HiFi.conf
@@ -154,6 +154,27 @@ If.dmic1 {
 	}
 }
 
+If.dmic2 {
+	Condition {
+		Type String
+		Haystack "${var:HaveInternalMic}"
+		Needle "dmic2"
+	}
+	True {
+		Include.dmic.File "/codecs/rt5640/DigitalMics2.conf"
+
+		SectionDevice."Mic" {
+			EnableSequence [
+				cset "name='Internal Mic Switch' on"
+			]
+
+			DisableSequence [
+				cset "name='Internal Mic Switch' off"
+			]
+		}
+	}
+}
+
 If.in1 {
 	Condition {
 		Type String
