--- a/ucm2/bytcr-rt5640/HiFi-Components.conf
+++ b/ucm2/bytcr-rt5640/HiFi-Components.conf
@@ -25,6 +25,15 @@ If.dmic1 {
 	True.Define.HaveInternalMic "dmic1"
 }
 
+If.dmic2 {
+	Condition {
+		Type String
+		Haystack "${CardComponents}"
+		Needle "cfg-mic:dmic2"
+	}
+	True.Define.HaveInternalMic "dmic2"
+}
+
 If.in1 {
 	Condition {
 		Type String
